# derive-flows

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: ALLIUM_PROPOSAL.md  TWITTER_THREAD.md
scripts/: conditional_analysis.py  fetch_allium_context.py  fetch_allium_liquidations.py  fetch_hyperliquid_prices.py  generate_thread_charts.py  unusual_flow_analysis.py
src/derive_flows/: __init__.py  cli.py  client.py  config.py  enrichment.py  models.py  parser.py  storage.py
src/derive_flows/ingest/: __init__.py  historical.py  realtime.py
tests/: test_enrichment.py  test_parser.py
